# Trip-Planner

./: .env.example  .gitignore  LICENSE  QUICKSTART.md  README.md  main.py  pyproject.toml  requirements.txt  test_function_calling.py  test_run.py  test_simple.py  test_with_logging.py
roadtrip_planner/: __init__.py  config.py  graph.py  llm_clients.py  logger.py  models.py  nodes.py  state.py  tools.py
src/: app.py  config.py  graph.py  models.py
src/llm/: client.py
src/logic/: fetcher_node.py  narrator_node.py  router_node.py  routing_node.py  scheduler_node.py
src/services/: pois.py  routing.py  weather.py
src/storage/: cache.py
src/utils/: geo.py  timebox.py
tests/: test_scheduler_utils.py
tests/sample_inputs/: paris_short.json
